--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
       "@mui/material-nextjs": "^6.4.3",
       "lottie-react": "^2.4.1",
       "lucide-react": "^0.525.0",
-      "next": "15.1.7",
+      "next": "^15.1.8",
       "react": "^19.0.0",
       "react-dom": "^19.0.0"
    },
@@ -25,7 +25,10 @@
       "@types/node": "^20",
       "@types/react": "^19",
       "@types/react-dom": "^19",
+      "@typescript-eslint/eslint-plugin": "^8.35.0",
+      "@typescript-eslint/parser": "^8.35.0",
       "eslint": "^9.30.0",
+      "eslint-config-prettier": "^10.1.5",
       "prettier": "^3.6.2",
       "typescript": "^5"
    }
