--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.525.0",
     "next": "^15.1.8",
+    "overlayscrollbars": "^2.11.4",
+    "overlayscrollbars-react": "^0.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
